# tasc

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task_fixture.yml
abi/: TascEscrow.abi.json
contracts/: MockUSDC.sol  TascEscrow.sol
docs/: adoption-plan.md  base-sepolia-v1.md  evm-settlement-v1.md  funding-events-v1.md  indexer-admission-v1.md  local-evm-v1.md  production-mainnet-runbook.md  progress-assessment.md  protocol-v1.md  release-modes.md  rpc-scanner-v1.md  solana-deploy-v1.md  solana-devnet-v1.md  solana-program-v1.md  static-web-v1.md  task-intents-v1.md  testnet-handoff-v1.md  wallet-signing-v1.md
docs/releases/: v0.1.0-mainnet-proof.1.md
examples/: extract_contact_info.tasc  ledger.json  summarize_url.tasc  summarize_url_refund.tasc  summarize_url_refund_job.tasc  summarize_url_spl.tasc  summarize_url_timeout.tasc  summarize_url_timeout_job.tasc
examples/attestations/: summarize_url_spl.verifier-ingestion.json
examples/events/: summarize_url.funded-log.json
examples/funding/: summarize_url.bad-amount.json  summarize_url.from-log.json  summarize_url.funded.json
examples/index/: funded.batch.index.json  solana.funded.batch.index.json  solana.live.index.json  solana.program-account.index.json  (+7 more)
programs/solana-tasc/: Cargo.toml
programs/solana-tasc/src/: lib.rs
web/: app.js  demo-index.js  index.html  production-run.html  production-run.js  styles.css  tasc-web-core.js
(+68 files in other folders)
